--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mushroom Learning -- We Teach Code!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index, follow">
   <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We have classes and tutoring in Los Angeles, California.">
 	<meta name="author" content="Muhammad Meigooni">
 	<link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
@@ -29,7 +30,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="/">
-					<img src="assets/images/logo.png" alt="">
+					<img src="assets/images/logo.png" alt="Mushroom Learning logo">
 				</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -70,10 +71,10 @@
 		        <p id="top-panel-subtext-1">Join one of Mushroom Learning's awesome coding programs.</p>
 		        <p id="top-panel-subtext-2">Learn more about HTML/CSS, JavaScript, and even Minecraft!</p>
 		        <ul>
-		        	<li><img src="assets/images/html5-rounded.png" alt=""></li>
-		        	<li><img src="assets/images/css-rounded.png" alt=""></li>
-		        	<li><img src="assets/images/js-rounded.png" alt=""></li>
-		        	<li><img src="assets/images/minecraft-rounded.png" alt=""></li>
+		        	<li><img src="assets/images/html5-rounded.png" alt="HTML"></li>
+		        	<li><img src="assets/images/css-rounded.png" alt="CSS"></li>
+		        	<li><img src="assets/images/js-rounded.png" alt="JavaScript"></li>
+		        	<li><img src="assets/images/minecraft-rounded.png" alt="Minecraft"></li>
 		        </ul>
 		      </div>
 				</div>
@@ -106,14 +107,14 @@
 						</div>
 					</div>
 					<div class="col-sm-6" id="panel-2-right">
-						<div id="about-us-logo"><img src="assets/images/logo-transparent-background.png" alt=""></div>
+						<div id="about-us-logo"><img src="assets/images/logo-transparent-background.png" alt="Mushroom Learning"></div>
 						<p>Mushroom Learning started in Austin, TX as a subset of <a href="http://www.makersquare.com">MakerSquare's</a> adult coding program. From promotional workshops to longitudinal courses, Mushroom Learning was recently recognized by Google and code.org for delivering coding education to local public, private, and charter schools.</p>
 					</div>
 				</div>
 				<div class="row" id="quotes">
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/jobs.png" alt="" id="left-quote-pic">
+							<img src="assets/images/jobs.png" alt="Steve Jobs" id="left-quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"I think everybody in this country should learn how to program a computer because it teaches you how to think."</p>
@@ -123,7 +124,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/susan.png" alt="" id="middle-quote-pic">
+							<img src="assets/images/susan.png" alt="Susan Wojcicki" id="middle-quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"Learning to code makes kids feel empowered, creative, and confident. If we want our young women to retain these traits into adulthood, a great option is to expose them to computer programming in their youth."</p>
@@ -133,7 +134,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/gabe.png" alt="" id="right-quote-pic">
+							<img src="assets/images/gabe.png" alt="Gabe Newell" id="right-quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"The programmers of tomorrow are the wizards of the future. You're going to look like you have magic powers compared to everybody else."</p>
@@ -243,7 +244,7 @@
 						<ul class="thumbnail-badges">
 							<li class="col-md-4 col-md-offset-2">
 								<div class="thumbnail ">
-									<img class="img-circle" src="assets/images/mike.jpg" alt="">
+									<img class="img-circle" src="assets/images/mike.jpg" alt="Michael">
 									<div class="caption">
 										<h4>Michael</h4>
 										<p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
@@ -252,7 +253,7 @@
 							</li>
 							<li class="col-md-4">
 								<div class="thumbnail">
-									<img class="img-circle" src="assets/images/muhammad.jpg" alt="">
+									<img class="img-circle" src="assets/images/muhammad.jpg" alt="Muhammad">
 									<div class="caption">
 										<h4>Muhammad</h4>
 										<p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
@@ -271,7 +272,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-center">
-						<img src="assets/images/logo-transparent-small.png" alt="" class="contact-image">
+						<img src="assets/images/logo-transparent-small.png" alt="Mushroom Learning small logo" class="contact-image">
 					</div>
 					<div class="col-lg-6 col-lg-offset-3 text-center">
 						<p class="lead">Questions? Contact us! (424) 244-9794</p>
