--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -5,6 +5,7 @@
   <title>Mushroom Learning -- Kids Coding Camp in Los Angeles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Our coding summer camp is for middle schoolers in Los Angeles.">
+  <meta name="robots" content="index, follow">
   <meta name="author" content="Muhammad Meigooni">
 
   <!-- CSS -->
