--- a/public/faq.html
+++ b/public/faq.html
@@ -5,6 +5,7 @@
   <title>Mushroom Learning -- Coding Class FAQ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Questions about our program? Find answers here!">
+  <meta name="robots" content="index, follow">
   <meta name="author" content="Muhammad Meigooni">
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/styles/css/font-awesome.css">
