--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -5,6 +5,7 @@
   <title>Mushroom Learning -- Kids Coding Tutoring</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Challenging time constraints? Have an advance student? Want personalized attention? Private tutoring is our most effective option for students.">
+  <meta name="robots" content="index, follow">
   <meta name="author" content="Muhammad Meigooni">
 
   <!-- CSS -->
