--- a/public/workshops.html
+++ b/public/workshops.html
@@ -5,6 +5,7 @@
   <title>Mushroom Learning -- Coding Workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Not sure if your child will be into coding? Try out one of our free workshops to get a taste for what web development has in store for them.">
+  <meta name="robots" content="index, follow">
   <meta name="author" content="Muhammad Meigooni">
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/styles/css/font-awesome.css">
