--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6" id="panel-2-right">
-						<div id="about-us-logo"><img src="assets/images/logo-transparent-background.png" alt="Mushroom Learning"></div>
+						<div id="about-us-logo"><img src="assets/images/logo-transparent-background.png" alt="Mushroom Learning logo"></div>
 						<p>Mushroom Learning started in Austin, TX as a subset of <a href="http://www.makersquare.com">MakerSquare's</a> adult coding program. From promotional workshops to longitudinal courses, Mushroom Learning was recently recognized by Google and code.org for delivering coding education to local public, private, and charter schools.</p>
 					</div>
 				</div>
