--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-          <img src="assets/images/logo.png" alt="">
+          <img src="assets/images/logo.png" alt="Mushroom Learning logo">
         </a>
       </div>
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -80,22 +80,22 @@
       </div>
       <div class="row">
         <div id="sample-day-carousel">
-          <div class="item"><img src="assets/images/check-in.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/robot.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/digital-design.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/linguistics-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/lunch-and-yoga.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/innovation-challenge.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/artificial-intelligence-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/progress-check.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/pick-up.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/optional-study-hall.png" alt="Owl Image"></div>
+          <div class="item"><img src="assets/images/check-in.png" alt="Sample Day Slide 1"></div>
+          <div class="item"><img src="assets/images/review.png" alt="Sample Day Slide 2"></div>
+          <div class="item"><img src="assets/images/robot.png" alt="Sample Day Slide 3"></div>
+          <div class="item"><img src="assets/images/coding-languages-am.png" alt="Sample Day Slide 4"></div>
+          <div class="item"><img src="assets/images/healthy-break-am.png" alt="Sample Day Slide 5"></div>
+          <div class="item"><img src="assets/images/digital-design.png" alt="Sample Day Slide 6"></div>
+          <div class="item"><img src="assets/images/linguistics-activity.png" alt="Sample Day Slide 7"></div>
+          <div class="item"><img src="assets/images/review-activity.png" alt="Sample Day Slide 8"></div>
+          <div class="item"><img src="assets/images/lunch-and-yoga.png" alt="Sample Day Slide 9"></div>
+          <div class="item"><img src="assets/images/innovation-challenge.png" alt="Sample Day Slide 10"></div>
+          <div class="item"><img src="assets/images/coding-languages-pm.png" alt="Sample Day Slide 11"></div>
+          <div class="item"><img src="assets/images/healthy-break-pm.png" alt="Sample Day Slide 12"></div>
+          <div class="item"><img src="assets/images/artificial-intelligence-activity.png" alt="Sample Day Slide 13"></div>
+          <div class="item"><img src="assets/images/progress-check.png" alt="Sample Day Slide 14"></div>
+          <div class="item"><img src="assets/images/pick-up.png" alt="Sample Day Slide 15"></div>
+          <div class="item"><img src="assets/images/optional-study-hall.png" alt="Sample Day Slide 16"></div>
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <img src="assets/images/logo-transparent-small.png" alt="" class="contact-image">
+            <img src="assets/images/logo-transparent-small.png" alt="Mushroom Learning small logo" class="contact-image">
           </div>
           <div class="col-lg-6 col-lg-offset-3 text-center">
             <p class="lead">Questions? Contact us! (424) 244-9794</p>
