--- a/public/workshops.html
+++ b/public/workshops.html
@@ -30,7 +30,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-          <img src="assets/images/logo.png" alt="">
+          <img src="assets/images/logo.png" alt="Mushroom Learning Logo">
         </a>
       </div>
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -142,7 +142,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <img src="assets/images/logo-transparent-small.png" alt="" class="contact-image">
+            <img src="assets/images/logo-transparent-small.png" alt="Mushroom Learning small logo" class="contact-image">
           </div>
           <div class="col-lg-6 col-lg-offset-3 text-center">
             <p class="lead">Questions? Contact us! (424) 244-9794</p>
