--- a/public/faq.html
+++ b/public/faq.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group text-left" id="accordion-faq">
                     <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">What are the age requirements on the summer camp?
+                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">What are the age requirements on the program?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
                       <div id="collapse1" class="panel-collapse collapse">
@@ -100,25 +100,55 @@
                       </div>
                     </div>
                     <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What kind of snacks and lunch will be provided?
+                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What does Mushroom Learning's program cover?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
                       <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
-                          <p>Snacks will vary from sliced fruit to hummus and pita chips and lightly salted popcorn. Lunches will be a balanced combination of easy to eat foods.</p>
-                          <p>If you have any concerns or there are any dietary restrictions we should know about, please email hello@mushroomlearning.com.</p>
+                          Our lower level courses cover HTML, CSS and JavaScipt.
                         </div>
                       </div>
                     </div>
                     <div class="panel">
-                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse4">Where is the camp located?
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse4">Where is the summer camp located?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
-                      <div id="collapse4" class="panel-collapse collapse in">
+                      <div id="collapse4" class="panel-collapse collapse">
                         <div class="panel-body">
                           <p>The City School</p>
                           <p>11625 West Pico Blvd</p>
                           <p>Los Angeles, CA 90064</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse5">Who are your instructors?
+                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
+                      </a>
+                      <div id="collapse5" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          Our instructors are all coding ninjas that make learning fun. They all are vetted to not only be coding gurus, but have to have fun engaging personalities, you might even have a former Jeopardy contestant teaching one of your classes. Our private tutoring includes our in-depth tutoring matching process. We focus on finding the right instructor to fit both the student's personality and their unique learning style. 
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse6">What types of projects will students be doing?
+                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
+                      </a>
+                      <div id="collapse6" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          Students will learn the basics of web development and we will help guide and scope a different project for every student.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse7">Why take a mushroom learning course?
+                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
+                      </a>
+                      <div id="collapse7" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                         <p>Computational thinking teaches you how to tackle large problems by breaking them down into a sequence of smaller, more manageable problems. It allows you to tackle complex problems in efficient ways that operate at huge scale. It involves creating models of the real world with a suitable level of abstraction, and focus on the most pertinent aspects. It helps you go from specific solutions to general ones.</p>
+                         <p>Computational thinking is a skill that everyone should learn. Even if you never become a professional software engineer, you will benefit from knowing how to think this way. It will help you understand and master technology of all sorts and solve problems in almost any discipline.</p>
                         </div>
                       </div>
                     </div>
