added bing meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index, follow">
   <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We have classes and tutoring in Los Angeles, California.">
+  <meta name="msvalidate.01" content="43A322BB64D87C2888664950A298083C" />
 	<meta name="author" content="Muhammad Meigooni">
 	<link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/styles/css/font-awesome.css">
