added panel background

--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- About -->
-  <section class="wrapper-lg" id="about">
+  <section class="wrapper-lg" id="about" style='background: url("assets/images/congruent_pentagon.png")'>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
