--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -44,8 +44,8 @@
         <ul class="nav navbar-nav">
           <li><a href="/" id="home-url">Home</a></li>
           <li><a href="/workshops" id="workshops-url">Workshops</a></li>
+          <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
           <li><a href="#programs" id="classes-url">Classes</a></li>
-          <li><a href="#programs" id="summer-camp-url">Summer Camp</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Tutoring <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -60,7 +60,7 @@
   </nav>
 
   <!-- About -->
-  <section class="wrapper-lg" id="about">
+  <section class="wrapper-lg" id="about" style='background: url("assets/images/congruent_pentagon.png")'>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
