--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 		</section>
 
 		<!-- About -->
-		<section class="wrapper-lg" id="about">
+		<section class="wrapper-lg" id="about" style='background: url("assets/images/mushroom.png")'>
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-center">
