--- a/public/workshops.html
+++ b/public/workshops.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- About -->
-  <section class="wrapper-lg" id="about">
+  <section class="wrapper-lg" id="about" style='background: url("assets/images/congruent_pentagon.png")'>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
