made h1 tags more diverse

--- a/public/faq.html
+++ b/public/faq.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
-          <h1>Mushroom Learning</h1>
+          <h1>Mushroom Learning FAQ</h1>
           <p class="lead">Have other questions? <br>Call 424-244-9794 or email <a href="mailto:hello@mushroomlearning.com">hello@mushroomlearning.com</a></p>
         </div>
       </div>
