--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1>Mushroom Learning</h1>
+          <h1>Kids Summer Camp</h1>
           <p class="lead">Summer Camp Details</p>
         </div>
       </div>
