--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -64,7 +64,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
-          <h1>Mushroom Learning</h1>
+          <h1>Private Tutoring</h1>
           <p class="lead">Highly intelligent and highly trained, our tutors are selected not just for their coding experience, but also their ability to teach and communicate effectively.</p>
           <p class="lead">Students are matched with tutors based on topic of interest and personality. We have tutors for all levels of computer science.</p>
         </div>
