--- a/public/workshops.html
+++ b/public/workshops.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
-          <h1>Mushroom Learning</h1>
+          <h1>Kids Coding Workshop</h1>
           <p class="lead">Hosted in Mushroom Learning's unique learning environment, the workshop will give students an introduction into how websites are made, and the many languages that build the framework of the internet.</p>
         </div>
       </div>
@@ -267,7 +267,7 @@
     })
 
   </script>
-  
+
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
