added modal over summer camp

--- a/public/index.html
+++ b/public/index.html
@@ -179,8 +179,8 @@
 					<div class="col-sm-3">
 						<div class="tile" id="temp-highlight">
 							<div class="hexagon"><i class="icon-group icon-4x"></i></div>
-							<h4>THE MUSHROOM PROGRAM</h4>
-							<p>This is program is the full Shiitake. Our 8-week program covers coding languages HTML/CSS, and JavaScript in an our proprietary learning environment. In addition to our web design course, we will be offering a Minecraft modding course that combines JavaScript with the fun of gaming.</p>
+							<h4>The Mushroom Program</h4>
+							<p>This is program is the full Shiitake. Our 8-week program covers coding languages HTML/CSS, and JavaScript in our learning environment. In addition to our web design course, we will be offering a Minecraft modding course that combines JavaScript with the fun of gaming.</p>
 							<a class="btn btn-default btn-large typeform-share link" href="https://mushroomlearning.typeform.com/to/byyCEH" data-mode="2" target="_blank">Learn more!</a>
 							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 
