--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="modal-html">
 <head>
   <meta charset="utf-8">
   <title>Mushroom Learning -- Kids Coding Camp in Los Angeles</title>
@@ -26,7 +26,13 @@
   <link rel="shortcut icon" href="favicon.png">
 </head>
 
-<body id="home" data-spy="scroll" data-target=".navbar">
+<body class="modal-body modal-html" id="home" data-spy="scroll" data-target=".navbar">
+  <div class="overlay"></div>
+  <div class="modal-camp">
+    <!-- Change the width and height values to suit you best -->
+    <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/INvKTa" data-text="summer-camp-subscribe" style="width:540px;height:380px;"></div>
+    <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+  </div>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -316,6 +322,7 @@
     })
 
   </script>
+
 
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
