--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 					</li>
 					<li><a href="/workshops" id="workshops-url">Workshops</a></li>
 					<li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
-					<li><a href="#programs" id="classes-url">Classes</a></li>
+					<li><a href="/classes" id="classes-url">Classes</a></li>
 					<li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
 					<li><a href="/faq" id="faq-url">FAQ</a></li>
 				</ul>
@@ -339,6 +339,10 @@
 		$('#tutoring-url').click(function(){
 		   window.location.href='/tutoring';
 		})
+		
+    $('#classes-url').click(function(){
+       window.location.href='/classes';
+    })
 
     $(document).ready(function() {
       $("#classes-url").click(function(){
