--- a/public/faq.html
+++ b/public/faq.html
@@ -38,7 +38,7 @@
           <li><a href="/" id="home-url">Home</a></li>
           <li><a href="/workshops" id="workshops-url">Workshops</a></li>
           <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
-          <li><a href="/#programs" id="classes-url">Classes</a></li>
+          <li><a href="/classes" id="classes-url">Classes</a></li>
           <li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">FAQ <b class="caret"></b></a>
@@ -281,7 +281,7 @@
        window.location.href='/summer-camp';
     })
     $('#classes-url').click(function(){
-       window.location.href='/#programs';
+       window.location.href='/classes';
     })
 
     $('#tutoring-url').click(function(){
