--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -58,7 +58,7 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </li>
-          <li><a href="#programs" id="classes-url">Classes</a></li>
+          <li><a href="/classes" id="classes-url">Classes</a></li>
           <li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
           <li><a href="/faq" id="faq-url">FAQ</a></li>
         </ul>
@@ -318,7 +318,7 @@
     })
 
     $('#classes-url').click(function(){
-       window.location.href='/#programs';
+       window.location.href='/classes';
     })
 
   </script>
