--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -45,7 +45,7 @@
           <li><a href="/" id="home-url">Home</a></li>
           <li><a href="/workshops" id="workshops-url">Workshops</a></li>
           <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
-          <li><a href="#programs" id="classes-url">Classes</a></li>
+          <li><a href="/classes" id="classes-url">Classes</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Tutoring <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -215,7 +215,7 @@
     })
 
     $('#classes-url').click(function(){
-       window.location.href='/#programs';
+       window.location.href='/classes';
     })
     $('#summer-camp-url').click(function(){
        window.location.href='/summer-camp';
